[package]
name = "ldk-cashu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cdk = { git = "https://github.com/cashubtc/cdk.git" , rev = "6298da79f56fbfa87f0ec261190574a28c96c6eb", features = ["wallet"]} 
cdk-redb = { git = "https://github.com/cashubtc/cdk.git" , rev = "6298da79f56fbfa87f0ec261190574a28c96c6eb", features = ["wallet"]} 
hex = "0.4.3"
ldk-node = "0.3.0"
rand = "0.8.5"
secp256k1 = "0.27.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
