[package]
name = "ldk-cashu"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cdk = "0.1.1"
cdk-redb = "0.1.0"
hex-conservative = "0.2.1"
ldk-node = "0.3.0"
rand = "0.8.5"
reqwest = "0.12.5"
secp256k1 = "0.27.0"
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = "1.38.0"
